# inputsimulator

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.txt
.github/workflows/: rust.yml
src/: app.rs  config.rs  constants.rs  error.rs  logging.rs  main.rs  simulator.rs
src/ui/: components.rs  macros.rs  mod.rs  view.rs
src/utils/: hotkey.rs  key_utils.rs  key_wrapper.rs  mod.rs  persistence.rs  scroll.rs  serialization.rs
