[package]
name = "inputsimulator"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland"]
wayland = []

[dependencies]
device_query = "2.1.0"
evdev-rs = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
lazy_static = "1.5.0"
thiserror = "2.0.9"
log = "0.4.22"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "winit",
    "wayland",
    "wgpu",
]